--- a/sleuth/3.plotGenes.ipynb
+++ b/sleuth/3.plotGenes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,10 @@
     "    x = x.split('_')\n",
     "    patient = int(x[1])\n",
     "    treatment = x[2].split('-')[0]\n",
-    "    rep = x[2].split('-')[1]\n",
+    "    try:\n",
+    "        rep = x[2].split('-')[1]\n",
+    "    except IndexError:\n",
+    "        rep = '1'\n",
     "    if patient in responsivePatients:\n",
     "        response = 'responsive'\n",
     "    else:\n",
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +121,16 @@
     "    .reset_index()\n",
     "    .melt(id_vars='index', value_name='TMM', var_name='sample')\n",
     "    .rename({'index': 'ens_gene'}, axis=1))\n",
-    "geneCounts['ens_gene'] = geneCounts['ens_gene'].apply(lambda x: x.split('.')[0])"
+    "geneCounts['ens_gene'] = geneCounts['ens_gene'].apply(lambda x: x.split('.')[0])\n",
+    "\n",
+    "geneCounts['patient'], geneCounts['treatment'], geneCounts['response'], geneCounts['rep'] = (\n",
+    "    zip(*geneCounts['sample'].apply(splitSampleName)))\n",
+    "geneCounts['group'] = geneCounts['patient'].astype(str) + geneCounts['rep'].astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,15 +169,9 @@
     "    # Recover experimental group information encoded in sample name\n",
     "    counts['patient'], counts['treatment'], counts['response'], counts['rep'] = (\n",
     "        zip(*counts['sample'].apply(splitSampleName)))\n",
+    "    counts['group'] = counts['patient'].astype(str) + counts['rep'].astype(str)\n",
     "    data[model]['counts'] = counts\n",
-    "    \n",
-    "    # Sum transcript TPM across genes\n",
-    "    groups = ['ens_gene', 'ext_gene', 'sample', 'patient', 'treatment', 'response', 'rep']\n",
-    "    countsGene = counts.groupby(groups)['tpm'].sum().reset_index()\n",
-    "    # Add egdeR gene level TMM\n",
-    "    countsGene = pd.merge(countsGene, geneCounts, left_on=['ens_gene', 'sample'], right_on=['ens_gene', 'sample'])\n",
-    "    data[model]['countsGene'] = countsGene\n",
-    "    \n",
+    "\n",
     "    # Get top N DEG for plotting\n",
     "    n = 10\n",
     "    # Retrieve top DEGs ranked by logFC (max by transcript)\n",
@@ -183,7 +184,8 @@
     "    df['itemRgb'] = df['b'].apply(getColour)\n",
     "    df['score'] = 100 * (-np.log10(df['qval'])).astype(int)\n",
     "    df['score'] = df['score'].apply(lambda x: min(x, 1000))\n",
-    "    df[dtypes.keys()].to_csv(f'{model}-diffTx.bed12', header=False, index=False, sep='\\t')"
+    "    df.loc[df['chrom'].isin(validChroms), dtypes.keys()].to_csv(\n",
+    "        f'{model}-diffTx.bed12', header=False, index=False, sep='\\t')"
    ]
   },
   {
@@ -197,7 +199,7 @@
     "    \n",
     "    fig, axes = plt.subplots(1, 2, sharey=True)\n",
     "    for i, model in enumerate(['response', 'treatment']):\n",
-    "        geneData = data[model]['countsGene'].loc[data[model]['countsGene']['ens_gene'] == name]\n",
+    "        geneData = geneCounts.loc[geneCounts['ens_gene'] == name]   \n",
     "        if geneData.empty:\n",
     "            axes[i].axis('off')\n",
     "            continue\n",
@@ -207,9 +209,16 @@
     "        sns.violinplot(\n",
     "            x=model, y='TMM', inner=None, color='White',  cut=0,\n",
     "            linewidth=2, data=geneData, ax=axes[i])\n",
-    "        sns.stripplot(\n",
+    "        g = sns.stripplot(\n",
     "            x=model, y='TMM', hue='patient', alpha=0.8, \n",
     "            data=geneData, ax=axes[i])\n",
+    "        if i == 1:\n",
+    "            c1 = g.collections[2].get_offsets()\n",
+    "            c2 = g.collections[3].get_offsets()\n",
+    "            for a, b, in zip(c1, c2):\n",
+    "                axes[i].plot(\n",
+    "                    [a.data[0], b.data[0]], [a.data[1], b.data[1]], \n",
+    "                    color='grey', linewidth=0.5, ls='--', zorder=1)\n",
     "        axes[i].set_xlabel('Condition')\n",
     "        axes[i].set_title(f'{symbol}, $p_{{adj}}$ {formatP(p_adj)}', loc='left')\n",
     "        axes[i].get_legend().remove()\n",
@@ -227,17 +236,27 @@
     "                bbox_extra_artists=(lgd,), bbox_inches='tight')\n",
     "\n",
     "    allTranscripts = data[model]['diffTx'].loc[data[model]['diffTx']['ens_gene'] == name, 'target_id'].unique()\n",
-    "    for i, transcript in enumerate(allTranscripts):\n",
+    "    for _, transcript in enumerate(allTranscripts):\n",
     "        fig, axes = plt.subplots(1, 2, sharey=True)\n",
     "        for i, model in enumerate(['response', 'treatment']):\n",
     "            countsTx = data[model]['counts'].loc[data[model]['counts']['target_id'] == transcript]\n",
+    "            if countsTx.empty:\n",
+    "                axes[i].axis('off')\n",
+    "                continue\n",
     "            p_adj = float(data[model]['diffTx'].loc[data[model]['diffTx']['target_id'] == transcript, 'qval'])\n",
-    "\n",
     "            sns.violinplot(\n",
     "                x=model, y='tpm', inner=None, color='White', cut=0, alpha=0.8,\n",
     "                linewidth=2, data=countsTx, ax=axes[i])\n",
-    "            sns.stripplot(\n",
+    "            \n",
+    "            g = sns.stripplot(\n",
     "                x=model, y='tpm', hue='patient', data=countsTx, ax=axes[i])\n",
+    "            if i == 1:\n",
+    "                c1 = g.collections[2].get_offsets()\n",
+    "                c2 = g.collections[3].get_offsets()\n",
+    "                for a, b, in zip(c1, c2):\n",
+    "                    axes[i].plot(\n",
+    "                        [a.data[0], b.data[0]], [a.data[1], b.data[1]], \n",
+    "                        color='grey', linewidth=0.5, ls='--', zorder=1)\n",
     "            axes[i].set_ylabel('Transcripts Per Million (TPM)')\n",
     "            axes[i].set_xlabel('Condition')\n",
     "            axes[i].set_title(f'{symbol} ({transcript}), $p_{{adj}}$ {formatP(p_adj)}', loc='left')\n",
@@ -251,13 +270,6 @@
     "        fig.savefig(f'plots/{outName}/transcripts/{transcript}.svg',\n",
     "                    bbox_extra_artists=(lgd,), bbox_inches='tight')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
